[package]
name = "fighter_game"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.14"
# 2D Physics engine for collision detection
bevy_xpbd_2d = "0.5"

# The following is recommended for faster compilation in debug builds
[features]
default = [
    "bevy/dynamic_linking",
]
