[package]
name = "fighter_game"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.14"
# 2D Physics engine for collision detection
bevy_xpbd_2d = "0.5"
rand = "0.9.2"
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1.0"
# Audio support
# bevy_kira_audio = "0.22"  # Optional: Can be removed if not using

# Use dynamic linking for releases (easier distribution with proper bundling)
[features]
default = ["bevy/dynamic_linking"]

# Optional static linking for specific use cases
static = []
