[package]
name = "fighter_game"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Release profile - optimize for distribution
[profile.release]
opt-level = 3
panic = "abort"  # Use abort panic for smaller binaries

[dependencies]
bevy = { version = "0.14", default-features = false, features = ["webgl2"] }
# 2D Physics engine for collision detection
bevy_xpbd_2d = "0.5"
rand = { version = "0.8", default-features = false }
tracing = "0.1"
# Disable tracing-subscriber for web to avoid dependency issues
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"
serde_json = "1.0"
# WebAssembly support
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "0.8", default-features = false, features = ["v1"] }
# Audio support
# bevy_kira_audio = "0.22"  # Optional: Can be removed if not using

# Use dynamic linking for releases (easier distribution with proper bundling)
[features]
default = ["bevy/dynamic_linking"]
# Optional static linking for specific use cases
static = []
# Enable web-specific features for Bevy
web = ["bevy/webgl2"]

# WebAssembly build configuration
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
